[package]
name = "terrain"
version = "0.1.0"
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
noise = "0.7.0"
bevy = {features = ["dynamic"], git="https://github.com/bevyengine/bevy.git", commit = "7356f1586d74039f840bcfcf24af3e21c23e3c18" }
#bevy = { git = "https://github.com/bevyengine/bevy", commit = "4423a2fa2dc82fad71525ed3f44e16b8481a4902", default-features = true, features = ["dynamic"]}

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=n"]
