[package]
name = "terrain"
version = "0.1.0"
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
noise = "0.7.0"
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
#bevy = { git = "https://github.com/bevyengine/bevy", commit = "4423a2fa2dc82fad71525ed3f44e16b8481a4902", default-features = true, features = ["dynamic_linking"]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


